--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name='theme-color' content='#ffffff' />
   <meta name='theme-color' content='#ffffff' media='(prefers-color-scheme: light)'>
   <meta name='theme-color' content='#101010' media='(prefers-color-scheme: dark)'>
-  <script src="https://cdn.jsdelivr.net/npm/marked@12.0.0/lib/marked.umd.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css@5.5.1/github-markdown-light.css">
+  <script src="//pkg.renj.io/static/js/marked.umd.min.js"></script>
+  <link rel="stylesheet" href="//pkg.renj.io/static/css/github-markdown-light.css">
 </head>
 <style>
     .markdown-body {
